--- a/Estruturas/index.html
+++ b/Estruturas/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css"/>
-    <script src="assets/js/script.js"></script>
-
+    <link rel="stylesheet" href="assets/css/style.css" />
     <title>Contador</title>
 </head>
 <body>
     <h1>Contador</h1>
-    <p>Clique nos botões e veja o que acontece :)</p>
-    <div>
-        
+    <p>Este é o meu primeiro projeto Javascript.</p>
+    <div id="counter">
+        <button name="subtrair/decrement" onclick="decrement()">-</button>
+        <span id="currentNumber">0</span>
+        <button name="adicionar/add" onclick="increment()">+</button>
     </div>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
